syntax = "proto3";

package go.micro.srv.auth;

service Auth {
  rpc CreateJwt(CreateJwtRequest) returns (CreateJwtResponse) {}
  rpc ValidateJwt(ValidateJwtRequest) returns (ValidateJwtResponse) {}
}

message CreateJwtRequest {
  string username = 100;
  string password = 101;
}

message CreateJwtResponse {
  string token = 102;
}

message ValidateJwtRequest {
  string token = 200;
}

message ValidateJwtResponse {
  bool valid = 201;
  string error = 202;
}
